<resources>
    <string name="app_name">POSitive_Eating</string>
    <string name="user_name">User_Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="ordering_menu">Ordering Menu</string>
    <string name="button">Button</string>
    <string name="button5">Button</string>
    <string name="button6">Button</string>
    <string name="order_status">Order Status</string>
    <string name="seating">Seating</string>
    <string name="schedule">Schedule</string>
    <string name="payroll">Payrol</string>
    <string name="payrol">Payroll</string>
    <string name="editusers">EditUsers</string>
    <string name="add_employee">Add_Employee</string>
    <string name="bank_account">Bank Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="routing_number">Routing Number</string>
    <string name="social">Social</string>
    <string name="social1">Social</string>
    <string name="banknumber">bankNumber</string>
    <string name="firstname">firstName</string>
    <string name="lastname">lastName</string>
    <string name="routingnumber">routingNumber</string>
    <string name="add_employee_button">Add Employee</string>
    <string name="clock_in">Clock in?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="title_activity_order_menu">order_menu</string>
    <string name="button32">Button</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="add_food">Add Food</string>
    <string name="food">Food</string>
    <string name="name12">Name</string>
    <string name="name14">Name</string>
    <string name="price">Price</string>
    <string name="password3">Password</string>
    <string name="pay_hour">Pay/Hour</string>
    <string name="phone">Phone</string>
    <string name="positionnum">PositionNum</string>
    <string name="first_name22">First Name:</string>
    <string name="last_name22">Last Name:</string>
    <string name="user_number">User Number:</string>
    <string name="place_order">Place_Order</string>
    <string name="addfood">AddFood</string>
    <string name="place_order11">Place Order</string>

    <!--> This is the Customer strings-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC9KxRvcZhsLFBf7ggjZN4zO1lOJCUoMy4</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in!</string>
    <string name="action_sign_in_short">Sign in, again!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Menu</string>
    <string name="res_size_prompt">Choose Size of Party</string>
    <string-array name="table_size_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="title_activity_edit_food_menu">EditFoodMenu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_food_menu">AddFoodMenu</string>
<<<<<<< HEAD

    <string name="option_instr">Type your options below. Make sure to separate each option by a newline.</string>

=======
    <string name="option_instr">Type your options below. Make sure to separate each option with comas.</string>
>>>>>>> 0b66bae29d5748fcd8105702762022c6d5b35feb
</resources>
