<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alec.positive_eating.Employee_MainScreen">

    <Button
        android:text="@string/order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/OrderStatButton"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/OrderStatButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/Schedule"
        tools:ignore="RelativeOverlap" />

    <Button
        android:text="Add Employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/Edit_Users" />

    <Button
        android:text="@string/payrol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/Schedule"
        android:layout_alignStart="@+id/Schedule"
        android:id="@+id/Payroll" />

    <Button
        android:text="Floor\nPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Ordering_Menu"
        android:layout_marginTop="57dp"
        android:id="@+id/addTableMap" />

    <Button
        android:text="Employee\nList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addTableMap"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/viewEmployeeList" />
</RelativeLayout>
